trying to fix img issues

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>I'm Rachel!</h1>
 
   <!-- Image -->
-  <span title="hi, i love you"></span><img src="C:/Users/rvpow/Documents/Data_Analytics/Class_Activities/01-Lesson-Plans/11-Web/2/Activities/01-Stu_HTMLBio/Unsolved/IMG_8485.jpg" alt = "Pic of Esther"/>
+  <span title="hi, i love you"></span><img src="IMG_8485.jpg" alt = "Pic of Esther"/>
 
 
   <span title="hi, i love you"></span><img src=" https://img.purch.com/w/660/aHR0cDovL3d3dy5saXZlc2NpZW5jZS5jb20vaW1hZ2VzL2kvMDAwLzA4OC85MTEvb3JpZ2luYWwvZ29sZGVuLXJldHJpZXZlci1wdXBweS5qcGVn" alt="Puppy!" />
