trying to fix img issues

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>I'm Rachel!</h1>
 
   <!-- Image -->
-  <span title="hi, i love you"></span><img src="IMG_8485.jpg" alt = "Pic of Esther"/>
+  <span title="hi, i love you"></span><img src="https://github.com/rvp0005/rvp0005.github.io/blob/master/IMG_8485.jpg" alt = "Pic of Esther"/>
 
 
   <span title="hi, i love you"></span><img src=" https://img.purch.com/w/660/aHR0cDovL3d3dy5saXZlc2NpZW5jZS5jb20vaW1hZ2VzL2kvMDAwLzA4OC85MTEvb3JpZ2luYWwvZ29sZGVuLXJldHJpZXZlci1wdXBweS5qcGVn" alt="Puppy!" />
